The Project is updated